:wrench: fixed some gaps

--- a/src/app/components/form/direccion/direccion/direccion.component.scss
+++ b/src/app/components/form/direccion/direccion/direccion.component.scss
@@ -1,6 +1,7 @@
 .box {
   display: flex;
   flex-direction: column;
+  gap: 16px;
 }
 
 .sub-box {
